# Conversations-4

./: README.md  main.py  pyproject.toml
players/player_4/: player.py  player4.py  plot_results.py  process_data.py  readme.txt  rules.txt  scenarios.yaml  sim.py  simulation_data_loader.py  train.py
